# pycombinators

./: README.md  combinators.py  pycombinators.py  setup.cfg
combinators/: synthesize.py
