[metadata]
name = combinators
version = 1.0.0
author = Evan Hock
author_email = mocaointegral@gmail.com
description = Elementary combinators in Python inspired by LISP and Haskell. Mostly a convenience library for my sake.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Evan-Hock/pycombinators
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.10
